add: Add schedules

--- a/android/app/src/main/res/layout/widget.xml
+++ b/android/app/src/main/res/layout/widget.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,7 +15,6 @@
         android:id="@+id/schedules"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
         android:orientation="vertical">
 
         <TextView
@@ -28,6 +29,46 @@
 
         <TextView
             android:id="@+id/schedule2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/schedule_background"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="10dp"
+            android:text="TextView"
+            android:textColor="#fff" />
+
+        <TextView
+            android:id="@+id/schedule3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/schedule_background"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="10dp"
+            android:text="TextView"
+            android:textColor="#fff" />
+
+        <TextView
+            android:id="@+id/schedule4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/schedule_background"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="10dp"
+            android:text="TextView"
+            android:textColor="#fff" />
+
+        <TextView
+            android:id="@+id/schedule5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/schedule_background"
+            android:paddingHorizontal="15dp"
+            android:paddingVertical="10dp"
+            android:text="TextView"
+            android:textColor="#fff" />
+
+        <TextView
+            android:id="@+id/schedule6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/schedule_background"
